--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,31 @@
 <!doctype html>
 <html>
   <head>
-    <title>Getting Started</title>
+    <title>Catalog</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="theme-color" content="#ffffff">
     <link rel="apple-touch-icon" href="images/icon.png">
     <link rel="manifest" href="manifest.json">
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+      }
+
+      .frame {
+        display: block;
+        width: 100vw;
+        height: 100vh;
+        max-width: 100%;
+        margin: 0;
+        padding: 0;
+        border: 0 none;
+        box-sizing: border-box;
+      }
+    </style>
   </head>
   <body>
+    <iframe class="frame" src="http://j22805.servers.jiffybox.net/kataloge/trollkarl/trollkarl_de.pdf"></iframe>
     <noscript>
       <strong>We're sorry but the catalog doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
